# lurus-autoresearch

./: .gitignore  README.md  STRATEGY.md
.claude/: ORCHESTRATION.md
.claude/agents/: implementer.md  qa.md
.github/workflows/: resman.yml
auto_research_task/: agent_economics_game_theory.md  ai_agent_revolution.md  program.md
auto_research_task/resman/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
auto_research_task/resman/docs/: MCP.md
auto_research_task/resman/examples/: sample-results.tsv
auto_research_task/resman/src/: cli.rs  error.rs  html.rs  hw.rs  logtail.rs  main.rs  model.rs  signals.rs  store.rs  term.rs
auto_research_task/resman/src/commands/: add.rs  best.rs  compare.rs  diff.rs  distill.rs  export.rs  import.rs  init.rs  list.rs  mcp.rs  mod.rs  near.rs  parse_log.rs  report.rs  search.rs  stats.rs  tree.rs  verify.rs  watch.rs
ex_autoresearch/: .env.example  .formatter.exs  Dockerfile  README.md  dev.db  docker-compose.yml  ex_autoresearch_dev.db  ex_autoresearch_dev.db-shm  ex_autoresearch_dev.db-wal  justfile  mix.exs  winner.md
ex_autoresearch/.beads/: issues.jsonl
ex_autoresearch/assets/css/: app.css
ex_autoresearch/assets/js/: app.js
ex_autoresearch/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
ex_autoresearch/docs/: agent.md  architecture.md  beam_native_autoresearch.md  cluster.md  multi-gpu-setup.md  referee.md  training.md
ex_autoresearch/lib/: ex_autoresearch.ex  ex_autoresearch_web.ex
ex_autoresearch/lib/ex_autoresearch/: accounts.ex  mailer.ex  (+2 more)
ex_autoresearch/test/: test_helper.exs
(+63 files in other folders)
