[package]
name = "resman"
version = "0.8.0"
edition = "2024"
description = "Local-first experiment tracker for autonomous AI training agents"
license = "MIT"
repository = "https://github.com/hanmahong5-arch/lurus-autoresearch"
keywords = ["ml", "experiment-tracking", "ai-agents", "cli", "training"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "resman"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
anyhow = "1"
thiserror = "2"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
